--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ plugins {
     id 'org.jetbrains.intellij' version '1.13.2' // Latest plugin for JetBrains
 }
 
-group = 'com.example.codeoptimizer'
-version = '1.0-SNAPSHOT'
+group = 'com.majjid.codeoptimizer'
+version = '1.1'
 
 repositories {
     mavenCentral()
