--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,8 @@ dependencies {
     implementation 'com.theokanning.openai-gpt3-java:client:0.18.2'
     implementation 'org.projectlombok:lombok:1.18.28'
     implementation platform('com.google.cloud:libraries-bom:26.29.0')
-    implementation 'com.google.cloud:google-cloud-vertexai'
+//    implementation 'com.google.cloud:google-cloud-vertexai'
+    implementation 'com.google.cloud:google-cloud-vertexai:0.1.0'
 
 }
 
@@ -39,4 +40,17 @@ tasks {
     runIde {
         jvmArgs = ['-Xmx2G'] // Adjust memory if necessary
     }
+}
+
+task fatJar(type: Jar) {
+    manifest {
+        attributes 'Implementation-Title': project.name,
+                'Implementation-Version': version
+    }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    with jar
+
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
