--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,5 +1,5 @@
 <idea-plugin>
-    <idea-version since-build="231" until-build="232.*"/>
+    <idea-version since-build="231" until-build="243.*"/>
     <id>com.microgpt.codeoptimizer</id>
     <name>Code Optimizer</name>
     <description>A JetBrains plugin to optimize and analyze your code.</description>
@@ -15,6 +15,11 @@
     <extensions defaultExtensionNs="com.intellij">
         <applicationService serviceInterface="org.majjid.plugin.CodeAnalysisService"
                             serviceImplementation="org.majjid.plugin.CodeAnalysisService"/>
+    </extensions>
+    <extensions defaultExtensionNs="com.intellij">
+        <toolWindow id="Code Suggestions"
+                    anchor="right"
+                    factoryClass="org.majjid.plugin.CodeSuggestionToolWindow"/>
     </extensions>
 
     <actions>
